src/styles/App.scss
@import './variables.scss';

*{
  outline:solid 1px green;
}

html,
body,
#root,
.App{
  margin: 0;
  padding: 0;
  height: calc(100% - 10px);
}

// *{
//   outline: 1px solid limegreen;
// }

button{
  cursor: pointer;
}

a{
  text-decoration: none;
  color: black;
}

ul{
  list-style: none;
  padding-inline-start: 0;
}

.navigation-bar{
  background-color:$primary-color; 
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  align-items: center;
}

.webpage-header{
  color: $font-color;
  flex: 0 1 5rem;
  font-size: max(.5rem, .8vw);
  position: relative;
  display: flex;
  justify-content: center;
  padding: 0 3rem;
  transition: text-shadow .5s;

  &:hover{
    text-shadow:1px 1px #ffffff; 
  }

  &::after{
    content:'';
    position:absolute;
    width: 65%;
    transform: scaleX(0);
    top: 60px;
    height: 2px;
    left: 2px;
    transform-origin: bottom left;
    background-color: #ffffff;
    transition: transform .5s ease-out;
  }

  &:hover::after{
    transform: scalex(1.2);
    transform-origin: bottom left;
  }
}

.sign-in,
.sign-out{
  background-color: transparent;
  border: none;
  flex-basis: 18rem;
  &::after{
    width: 0;
  }
}

.sign-out{
  display: flex;
  gap: 2rem;
  justify-content: center;
  align-items: center;
}

.sign-in[hidden=true],
.sign-out[hidden=true]{
  display: none;
}

.user-pic{
  border-radius: 50px;
  background-size: cover;
  height: 50px;
  width: 50px;
}

@media (max-width: 739px){
  .navigation-bar{
    padding-bottom: 1rem;
  }
}

.homepage-container,
.leaderboards-container{
  @include page-positioning;

  background-color: $secondary-color;
  color: $font-color;
}

.homepage-container{
  flex-grow: 1;
  min-height: 100%;
  max-height: fit-content;
  row-gap: 4rem;
  display:flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
}

.instructions-container{
  display:flex;
  flex-direction: column;
  width: clamp(45ch, 50%, 55ch);
}

.instructions-article{
  display: flex;
  flex-direction: column;
}

.instructions-header{
  font-size: 1.5em;
  font-style: italic;
  align-self: center;
}


.instructions-text{
  font-size: max(1.2em, 1.2vw);
  padding: .5rem 2rem;
  line-height: 1.4em;
}

.map-selection-container{
  flex: 1 1 auto;
  display: grid;
  row-gap: 1.5rem;
  column-gap: 1.5rem;
  align-items: flex-start;
  justify-items: center;
  // grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr));
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: repeat(2, 1fr);

  &> a > img{
    height: auto;
    width: clamp(5rem, 20vw, 13rem);
    border-radius: 15px;
    box-shadow: 0px 5px 20px 1px;
    transition: transform .3s, box-shadow 1s;

    &:hover{
      cursor: pointer;
      transform: translateX(-3px) translateY(-3px);
      box-shadow:0 2px 10px 0 white; 
    }
  }
}


.leaderboard-selection-container{
  color: $font-color;
  background-color:$secondary-color;
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(25rem, 1fr));
  justify-items: center;
  align-items: center;
  text-align-last: center;
  min-height: 100%;
  & > article > h2 {
    display: flex;
    justify-content: center;
  }

  & > article > a > img{
    border-radius: 15px;
    height: auto;
    width: max(5rem, 18vw);
    box-shadow: 0px 5px 20px 1px;
    transition: transform .3s, box-shadow 1s;

    &:hover{
      cursor: pointer;
      transform: translateX(-3px) translateY(-3px);
      box-shadow:0 2px 10px 0 white; 
    }
  }
}

.leaderboards-container{
  display: flex;
  justify-content: space-evenly;
  align-items: flex-start;
  min-height: 100vh;
  flex-wrap: wrap;
}


.leaderboards-table{
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  align-items: center;
  justify-items: center;
  min-width: 40px;
  grid-auto-rows: 15px ;
  row-gap: 2.5rem;
  column-gap: 5rem;
  height: 100%;
  padding: 2rem 0;
}

.table-headers{
  background-color: $primary-color;
  display: flex;
  justify-content: center;
  gap: 7rem;
  font-size: smaller;
}

.table-list{
  display: grid;
  grid-template-rows: 1fr;
}

.alias{
  display: flex;
  font-size: 20px;
  font-weight: 600;
}

.score{
  display: flex;
  font-style: oblique;
}

.gameview-container{
  position: relative;
  overflow: hidden;
}

.success-mark{
  padding: 30px;
  position: absolute;
  border: 3px solid red;
  border-radius: 40px;
  z-index: 999;
}

.gameview-container > img{
  display: flex;
  width: 100%;
  overflow: hidden;
  background-size: cover;
  background-position: center center;
}

.timer-container{
  background-color: rgba($color: $primary-color, $alpha: .8);
  color:$font-color;
  border-radius: 40px;
  padding:1.5vw 2vw;
  font-size: 2vw;
  position: fixed;
  right: 5%;
  top: 15%;
}

.characters-container{
  background-color: rgba($color: $primary-color, $alpha: .8);
  grid-template-rows: repeat(3, 1fr);
  display: flex;
  flex-direction: column;
  gap: 1rem;
  border-radius: 40px;
  padding: 1rem 1rem;
  position: fixed;
  left: (5%);
  top: 15%;
  transition: margin-top .2s;
}

@media (max-width: 752px){
  .characters-container,
  .timer-container{
    margin-top: 20%;
  }
}

@media (max-width: 451px){
  .characters-container,
  .timer-container{
    margin-top: 30%;
  }
}

.character-data-container{
  display: flex;
  justify-content: flex-start;
  align-items: center;
  flex-direction: column;
  flex-grow: 1;
}

.character-name{
  font-family: $font-family;
  color: $font-color;
  display: flex;
  justify-content: center;
  align-items: center;
  font-weight: 500;
  font-size: 1.7vw;
  font-variant: small-caps;
}
.character-data-container > img {
  flex: 1 1 5vw;
  max-width: 5vw;

  &.selected{
    opacity: .5;
  }
}

.dropdown-container{
  background-color: rgba($color: $primary-color, $alpha: 1);
  border-radius: 15px;
  position: absolute;
  display: none;
  top: 0px ;
  left: 0px ;
  overflow: hidden;
}

.dropdown-container > ul{
  justify-content: center;
  align-items: center;
}

.character-list{
  display: flex;
  flex-direction: column;
  padding:none;
}

.character-list > .character-name{
  flex-grow: 1;
  width: 100%;
  border-radius: 15px;
  
  &:hover{
    background-color: $secondary-color;
  }
  &:active{
    box-shadow: 1px 1px 1px 1px $primary-color;
    transform: translateY(2px);
  }
  &>button{
    padding: .2rem 3vw;
    border: none;
    background-color: transparent;
  }

}

.close-dropdown-button{
  flex-grow: 1;
  width: 100%;
  border-radius: 15px;
  border: none;
  background-color: transparent;
  font-family: $font-family;
  color: red;
  display: flex;
  justify-content: center;
  align-items: flex-end;
  gap: .6rem;
  font-weight: 500;
  font-variant: small-caps;
  padding: .2rem 3vw;
  font-size: 1.5vw;

  &:hover{
    background-color: rgb(235, 79, 79);
    color: black;
  }
}

.succesful-click{
  flex-grow: 1;
  width: 100%;
  color: rgb(113, 238, 113);
  font-family: $font-family;
  display: flex;
  gap: .5rem;
  padding: 0 2vw;
  justify-content: center;
  align-items: center;
  font-weight: 500;
  font-size: 1.5vw;
  font-variant: small-caps;
}

.background-brightness-wrapper{
  position: fixed;
  top:0px;
  right:0px;
  bottom:0px;
  left:0px;
  backdrop-filter: brightness(20%);
  z-index: 1;
}

.game-win-modal{
  color: $font-color;
  background-color: #283445;
  font-size: max(1.4em, 3vw);
  min-height: max(250px, 37vw);
  min-width: max(250px,43vw);
  border-radius: 15px;
  display: grid;
  grid-template-rows: 1fr 1.2fr .8fr;
  justify-content: center;
  justify-items: center;
  align-items: center;
  position: fixed;
  opacity: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  visibility: hidden;
  margin-top: 10%;
  box-shadow: 0px 8px 8px #000;
  transition: margin-top .5s ease-out, opacity .8s, visibility .5s linear;
}

.game-win-modal.show{
  visibility: visible;
  opacity: 1;
  margin-top: 0;
  transition: margin-top .5s ease-out, opacity .8s, visibility .5s linear;
}

.timer-value{
  font-weight: bolder;
}

.form-input{
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  &>input{
    text-align: center;
    color: $font-color;
    padding: max(.2rem, .9vw);
    width: max(10rem, 27vw);
    font-size: max(.45em,1.2vw);
    border:none;
    font-weight: 900;
    background-color: rgb(74, 89, 105);
    border-radius: 20px;

    &::placeholder{
      color: $font-color;
      font-weight: 400;
    }

    &:focus{
      outline:solid rgb(0, 162, 255);
    }
  }
}

.google-username-container{
  text-align: center;
  display: flex;
  justify-content: center;
  align-items: center;
  border:none;
  position: absolute;
  margin-bottom: max(5.9rem, 15vw);
  margin-left: max(.4rem, 2.9vw);
}

.use-google-username{
  color: rgb(0, 162, 255);
  border: none;
  background-color: transparent;
  font-size: max(.4em, 1vw);
  margin-left: max(1.4rem, 4.2vw);
}

span.google-username{
  font-size: max(.4em, 1.2vw );
  color:rgba(145, 141, 141, 0.896);
}

button.google-username{
  color: rgb(0, 162, 255);
  background-color: transparent;
  width: max(2.3rem,7vw);
  font-size: max(.8em, 1.2vw );
  font-weight: bolder;
  border:none;

  &:hover{
   color:rgb(81, 185, 245);
  }
}

.alias-form{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-content: center;
  row-gap: max(.5rem, 2vw);
}

.form-bottom{
  display: grid;
  justify-content: flex-start;
  grid-template-columns: repeat(2, 1fr);
  column-gap: max(.5rem, 4vw);
}

.form-button{
  color: $font-color;
  justify-self: center;
  font-family: $font-family;
  background-color: rgba(145, 141, 141, 0.896);
  font-weight: 900;
  font-size: max(.5em, .5vw);
  width: clamp(6.4rem, 13vw, 20rem);
  padding:max(.8rem, 2.1vw);
  height: 2.8vw;
  border: none;
  border-radius: 40px;
  display: flex;
  justify-content: center;
  align-items: center;
  align-self: center;
  flex-wrap: nowrap;

  &:hover{
    background-color:rgba(168, 158, 158, 0.896);
  }
}

.form-button.submit{
  background-color: rgb(0, 162, 255);
  margin-bottom: 1vw;

  &:hover{
    background-color:rgb(60, 176, 244);;
  }
}

